--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ p {
 </head>
 <body>
 <div class="container">
-  <h1 class="neon">I'd Rather Be Dry, But At Least I'm Alive</h1>
+  <h1 class="neon">Maria's Masks: Stunning Meets Safe</h1>
 </div>
 
 <!DOCTYPE html>
